# workd

./: Cargo.toml  LICENSE  README.md  build.rs  release.sh
.github/workflows/: publish.yml
src/: main.rs
src/api/: api_response.rs  mod.rs  version_info.rs
src/context/: info.txt
src/dir/: dir_item.rs  mod.rs
src/page/: mod.rs  page_index.rs
src/page/resources/: index.html
src/router/: mod.rs
