[package]
name = "workerd"
version = "0.1.1"
edition = "2021"
authors = ["zhangjianshe <zhangjianshe@gmail.com>"]
license = "MIT"
publish = true
description = "personal assistant running on local machine"
repository = "https://github.com/zhangjianshe/workerd.git"
homepage = "https://github.com/zhangjianshe/workerd.git"
keywords = ["persoanl","app","assistary","note","tools"]

build = "build.rs"

[dependencies]
axum = "0.8.1"
serde = {version="1.0.217",features=["serde_derive"]}
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.135"
chrono = "0.4.39"
satway_build = "0.1.18"
[build-dependencies]
satway_build = { version = "0.1.18" }
chrono = "0.4.39"


